DDF-4189 Fix banner z-index.

--- a/ui/packages/ui/src/main/webapp/less/installer/style.less
+++ b/ui/packages/ui/src/main/webapp/less/installer/style.less
@@ -67,7 +67,7 @@
   text-align: center;
   font-size: 14px;
 
-  z-index: 5000;
+  z-index: 1;
 }
 center {
   position: relative;
